# PDF-AST

./: .gitignore  Cargo.toml  README.md
.cargo/: audit.toml
.github/workflows/: ci.yml
benches/: parse_bench.rs
examples/: basic_usage.rs  comprehensive_analysis.rs
examples/dynamic_plugin/: Cargo.toml  README.md
examples/dynamic_plugin/src/: lib.rs
include/: pdf_ast.h
javascript/: README.md  index.d.ts  package.json
pdf-compliance/: Cargo.toml
pdf-compliance/src/: lib.rs
pdf-diff/: Cargo.toml
pdf-diff/src/: lib.rs
pdf-sec-analyzer/: Cargo.toml
pdf-sec-analyzer/src/: lib.rs  report.rs  rules.rs  scanner.rs  threats.rs
pdf-text-intel/: Cargo.toml
pdf-text-intel/src/: lib.rs
python/: Cargo.toml  README.md  pyproject.toml  setup.py  test_bindings.py
python/src/: lib.rs
src/: constants.rs  lib.rs
src/api/: mod.rs
src/ast/: document.rs  error.rs  graph.rs  linearization.rs  mod.rs  node.rs  provenance.rs
src/bindings/: javascript.rs  mod.rs  python.rs  python_simple.rs
src/compression/: mod.rs
src/crypto/: certificates.rs  decryption.rs  encryption.rs  mod.rs  pkcs7.rs  signature_verification.rs  signatures.rs  timestamp.rs
src/events/: mod.rs
src/ffi/: mod.rs
src/filters/: ccitt.rs  ccitt_tables.rs  crypt.rs  jbig2.rs  jpx.rs  mod.rs  predictor.rs
src/forms/: acroform.rs  mod.rs  xfa.rs
src/metadata/: icc.rs  mod.rs  xmp.rs
src/multimedia/: av.rs  mod.rs  richmedia.rs  threed.rs
src/parser/: accessibility.rs  cmap.rs  colorspace.rs  content_analyzer.rs  content_operands.rs  content_stream.rs  document_parser.rs  extgstate.rs  functions.rs  lazy_stream.rs  lexer.rs  mod.rs  names_tree.rs  object_parser.rs  ocg.rs  outlines.rs  output_intents.rs  page_tree.rs  pdf_file.rs  reference_resolver.rs  struct_tree.rs  text_extraction.rs  xref.rs
src/performance/: enhanced_lazy.rs  lazy_loading.rs  limits.rs  memory.rs  mod.rs  parallel.rs  progress.rs  streaming.rs
src/plugins/: api.rs  loader.rs  mod.rs  registry.rs
src/recovery/: diagnostics.rs  mod.rs  reconstruction.rs  strategies.rs
src/schema/: mod.rs
src/security/: etsi.rs  hardening.rs  heuristics.rs  ltv.rs  mod.rs  polyglot.rs  quirks.rs  report_output.rs  signatures.rs
src/serialization/: mod.rs
src/streaming/: chunks.rs  incremental.rs  mod.rs  pipeline.rs
src/transform/: builder.rs  mod.rs  operations.rs  validator.rs
src/traversal/: mod.rs
src/types/: mod.rs  object.rs  primitive.rs  reference.rs  stream.rs
src/validation/: constraints.rs  mod.rs  pdf_standards.rs  pdfa.rs  schema.rs
src/visitor/: mod.rs
tests/: acroform_stats_tests.rs  actions_ast_tests.rs  av_parse_tests.rs  ccitt_group3_1d_tests.rs  ccitt_group3_2d_tests.rs  ccitt_group4_tests.rs  content_stream_offsets_tests.rs  corpus_tests.rs  crypt_filter_key_derivation_tests.rs  crypto_cert_fingerprint_tests.rs  crypto_certificate_der_tests.rs  crypto_config_tsa_tests.rs  crypto_encryption_tests.rs  crypto_password_r2_tests.rs  crypto_password_r3_tests.rs  crypto_provider_tests.rs  crypto_revocation_tests.rs  font_cmap_ast_tests.rs  font_validation_tests.rs  fuzzing_tests.rs  heuristics_divergent_tests.rs  icc_profile_ast_tests.rs  integration_test.rs  integration_tests.rs  jpx_decode_tests.rs  jpx_invalid_tests.rs  ltv_dss_tests.rs  parser_tests.rs  pdf20_constraints_tests.rs  pdf20_iso_mapping_tests.rs  polyglot_detection_tests.rs  security_analyzer_document_signatures_tests.rs  security_analyzer_tests.rs  security_info_json_tests.rs  security_report_format_detection_tests.rs  security_report_output_tests.rs  security_report_toml_tests.rs  security_report_yaml_tests.rs  signature_verification_rsa_tests.rs  threed_parse_tests.rs  (+9 more)
tests/fixtures/: tstinfo_sha256_hello.der
