[package]
name = "pdf-diff"
version = "0.1.0"
edition = "2021"
authors = ["PDF-AST Team"]
description = "PDF document comparison and diff library using PDF-AST"
license = "MIT OR Apache-2.0"

[dependencies]
pdf-ast = { path = ".." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
similar = "2.3"
log = "0.4"