[package]
name = "pdf-sec-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["PDF-AST Team"]
description = "Security analysis library for PDF documents using PDF-AST"
license = "MIT OR Apache-2.0"

[dependencies]
pdf-ast = { path = ".." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
log = "0.4"

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }