[package]
name = "pdf-text-intel"
version = "0.1.0"
edition = "2021"
authors = ["PDF-AST Team"]
description = "Advanced text extraction and analysis library using PDF-AST"
license = "MIT OR Apache-2.0"

[dependencies]
pdf-ast = { path = ".." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
log = "0.4"