[package]
name = "pdf-ast-python"
version = "0.1.0"
edition = "2021"
authors = ["PDF-AST Team"]
description = "Python bindings for PDF-AST"
license = "MIT OR Apache-2.0"

[lib]
name = "pdf_ast"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
pdf_ast_core = { package = "pdf-ast", path = ".." }

[build-dependencies]
pyo3-build-config = "0.22"
